Сетка миникарты и скрипт ее отрисовки #30

--- a/src/Rottenwood/UtopiaMudBundle/Resources/views/Default/index.html.twig
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/views/Default/index.html.twig
@@ -3,8 +3,32 @@
 {% block content %}
     <div id="header"></div>
     {% block mapdiv %}
-        <div id="map">
-            {#<img src="{{ asset('assets/img/game_map.png') }}">#}
+        <div id="map" class="minimap">
+            <div id="nwwn">nwwn</div>
+            <div id="nwn">nwn</div>
+            <div id="nn">nn</div>
+            <div id="nen">nen</div>
+            <div id="neen">neen</div><br>
+            <div id="nww">nww</div>
+            <div id="nw">nw</div>
+            <div id="n">n</div>
+            <div id="ne">ne</div>
+            <div id="nee">nee</div><br>
+            <div id="ww">ww</div>
+            <div id="w">w</div>
+            <div id="r">r</div>
+            <div id="e">e</div>
+            <div id="ee">ee</div><br>
+            <div id="sww">sww</div>
+            <div id="sw">sw</div>
+            <div id="s">s</div>
+            <div id="se">se</div>
+            <div id="see">see</div><br>
+            <div id="swws">swws</div>
+            <div id="sws">sws</div>
+            <div id="ss">ss</div>
+            <div id="ses">ses</div>
+            <div id="sees">sees</div><br>
         </div>
     {% endblock mapdiv %}
     <div id="{% block gamedivname %}game{% endblock gamedivname %}">
