Реализация первой версии миникарты #30

--- a/src/Rottenwood/UtopiaMudBundle/Resources/views/Default/layout.html.twig
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/views/Default/layout.html.twig
@@ -17,8 +17,8 @@
             {% endblock jquery %}
             {% block headjscripts %}
                 <script src="http://autobahn.s3.amazonaws.com/js/autobahn.min.js"></script>
+                {#<script type="text/javascript" src="{{ asset('assets/js/minimap.js') }}"></script>#}
                 <script type="text/javascript" src="{{ asset('assets/js/script.js') }}"></script>
-                <script type="text/javascript" src="{{ asset('assets/js/minimap.js') }}"></script>
                 <script type="text/javascript" src="{{ asset('assets/js/bootstrap.js') }}"></script>
                 <script type="text/javascript" src="{{ asset('assets/js/bootstrap-confirmation.js') }}"></script>
             {% endblock headjscripts %}
