--- a/src/Rottenwood/UtopiaMudBundle/Resources/views/Default/index.html.twig
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/views/Default/index.html.twig
@@ -4,31 +4,31 @@
     <div id="header"></div>
     {% block mapdiv %}
         <div id="map" class="minimap">
-            <div id="nwwn">nwwn</div>
-            <div id="nwn">nwn</div>
-            <div id="nn">nn</div>
-            <div id="nen">nen</div>
-            <div id="neen">neen</div><br>
-            <div id="nww">nww</div>
-            <div id="nw">nw</div>
-            <div id="n">n</div>
-            <div id="ne">ne</div>
-            <div id="nee">nee</div><br>
-            <div id="ww">ww</div>
-            <div id="w">w</div>
-            <div id="r">r</div>
-            <div id="e">e</div>
-            <div id="ee">ee</div><br>
-            <div id="sww">sww</div>
-            <div id="sw">sw</div>
-            <div id="s">s</div>
-            <div id="se">se</div>
-            <div id="see">see</div><br>
-            <div id="swws">swws</div>
-            <div id="sws">sws</div>
-            <div id="ss">ss</div>
-            <div id="ses">ses</div>
-            <div id="sees">sees</div><br>
+            <div id="nwwn"></div>
+            <div id="nwn"></div>
+            <div id="nn"></div>
+            <div id="nen"></div>
+            <div id="neen"></div><br>
+            <div id="nww"></div>
+            <div id="nw"></div>
+            <div id="n"></div>
+            <div id="ne"></div>
+            <div id="nee"></div><br>
+            <div id="ww"></div>
+            <div id="w"></div>
+            <div id="r"></div>
+            <div id="e"></div>
+            <div id="ee"></div><br>
+            <div id="sww"></div>
+            <div id="sw"></div>
+            <div id="s"></div>
+            <div id="se"></div>
+            <div id="see"></div><br>
+            <div id="swws"></div>
+            <div id="sws"></div>
+            <div id="ss"></div>
+            <div id="ses"></div>
+            <div id="sees"></div><br>
         </div>
     {% endblock mapdiv %}
     <div id="{% block gamedivname %}game{% endblock gamedivname %}">
