--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -137,8 +137,19 @@ body {background-color:white;margin-left:0px;margin-top:0px;margin-right:0px;mar
 	color:#c1c1c1;
 }
 
+/****** Типы сообщений ******/
+
 .plaintext {
 	color:#c1c1c1;
+}
+
+.playerenterworldname {
+    color: #ffffff;
+    font-weight: 600;
+}
+
+.playerenterworld {
+    color: #17c111;
 }
 
 /****** Комната ******/
