--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -172,7 +172,7 @@ body {background-color:white;margin-left:0px;margin-top:0px;margin-right:0px;mar
 }
 
 .itemsinroom {
-    color: #0034c6;
+    color: #AFAFAF;
 }
 
 /*************    Команды    *************/
